@startuml

title __CHAT's Class Diagram__\n

  namespace com.jue.meet {
    namespace fragment {
      namespace chat {
        class com.jue.meet.fragment.chat.AllFriendFragment {
            - item_empty_view : View
            - mAllFriendAdapter : CommonAdapter<AllFriendModel>
            - mAllFriendRefreshLayout : SwipeRefreshLayout
            - mAllFriendView : RecyclerView
            - mList : List<AllFriendModel>
            + onCreateView()
            + onMessageEvent()
            + onRefresh()
            - initView()
            - queryMyFriends()
        }
      }
    }
  }
  

  namespace com.jue.meet {
    namespace fragment {
      namespace chat {
        class com.jue.meet.fragment.chat.CallRecordFragment {
            - dateFormat : SimpleDateFormat
            - disposable : Disposable
            - item_empty_view : View
            - mCallRecordAdapter : CommonAdapter<CallRecord>
            - mCallRecordRefreshLayout : SwipeRefreshLayout
            - mCallRecordView : RecyclerView
            - mList : List<CallRecord>
            + onCreateView()
            + onDestroy()
            + onRefresh()
            + onResume()
            - initView()
            - queryCallRecord()
        }
      }
    }
  }
  

  namespace com.jue.meet {
    namespace fragment {
      namespace chat {
        class com.jue.meet.fragment.chat.ChatRecordFragment {
            - item_empty_view : View
            - mChatRecordAdapter : CommonAdapter<ChatRecordModel>
            - mChatRecordRefreshLayout : SwipeRefreshLayout
            - mChatRecordView : RecyclerView
            - mList : List<ChatRecordModel>
            + onCreateView()
            + onMessageEvent()
            + onRefresh()
            + onResume()
            - initView()
            - queryChatRecord()
        }
      }
    }
  }
  

  com.jue.meet.fragment.chat.AllFriendFragment .up.|> androidx.swiperefreshlayout.widget.SwipeRefreshLayout.OnRefreshListener
  com.jue.meet.fragment.chat.AllFriendFragment -up-|> com.jue.framework.base.BaseFragment
  com.jue.meet.fragment.chat.CallRecordFragment .up.|> androidx.swiperefreshlayout.widget.SwipeRefreshLayout.OnRefreshListener
  com.jue.meet.fragment.chat.CallRecordFragment -up-|> com.jue.framework.base.BaseFragment
  com.jue.meet.fragment.chat.ChatRecordFragment .up.|> androidx.swiperefreshlayout.widget.SwipeRefreshLayout.OnRefreshListener
  com.jue.meet.fragment.chat.ChatRecordFragment -up-|> com.jue.framework.base.BaseFragment


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
